--- a/index.HTML
+++ b/index.HTML
@@ -10,7 +10,7 @@
     </head>
     <body>
         <header>
-            <h1>Passion guitare SYLVIA VS SANDRINE</h1>    
+            <h1>Passion guitare SYLVIA VS SANDRINE VS OCEANE</h1>    
         </header>
 
         <nav>
